tests/baselines/reference/accessorDeclarationEmitVisibilityErrors.errors.txt
accessorDeclarationEmitVisibilityErrors.ts(2,18): error TS2304: Cannot find name 'DoesNotExist'.


==== accessorDeclarationEmitVisibilityErrors.ts (1 errors) ====
    export class Q {
        set bet(arg: DoesNotExist) {}
                     ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'DoesNotExist'.
    }